// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/slider/demo/basic.md correctly 1`] = `
<div>
  <div
    class="c7n-slider"
  >
    <div
      class="c7n-slider-rail"
    />
    <div
      class="c7n-slider-track"
      style="left:0%;width:30%"
    />
    <div
      class="c7n-slider-step"
    />
    <div
      aria-disabled="false"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="30"
      class="c7n-slider-handle"
      role="slider"
      style="left:30%"
      tabindex="0"
    />
    <div
      class="c7n-slider-mark"
    />
  </div>
  <div
    class="c7n-slider"
  >
    <div
      class="c7n-slider-rail"
    />
    <div
      class="c7n-slider-track c7n-slider-track-1"
      style="left:20%;width:30%"
    />
    <div
      class="c7n-slider-step"
    />
    <div
      aria-disabled="false"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="20"
      class="c7n-slider-handle c7n-slider-handle-1"
      role="slider"
      style="left:20%"
      tabindex="0"
    />
    <div
      aria-disabled="false"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="50"
      class="c7n-slider-handle c7n-slider-handle-2"
      role="slider"
      style="left:50%"
      tabindex="0"
    />
    <div
      class="c7n-slider-mark"
    />
  </div>
  Disabled: 
  <span
    class="c7n-switch-small c7n-switch"
    tabindex="0"
  >
    <span
      class="c7n-switch-inner"
    />
  </span>
</div>
`;

exports[`renders ./components/slider/demo/event.md correctly 1`] = `
<div>
  <div
    class="c7n-slider"
  >
    <div
      class="c7n-slider-rail"
    />
    <div
      class="c7n-slider-track"
      style="left:0%;width:30%"
    />
    <div
      class="c7n-slider-step"
    />
    <div
      aria-disabled="false"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="30"
      class="c7n-slider-handle"
      role="slider"
      style="left:30%"
      tabindex="0"
    />
    <div
      class="c7n-slider-mark"
    />
  </div>
  <div
    class="c7n-slider"
  >
    <div
      class="c7n-slider-rail"
    />
    <div
      class="c7n-slider-track c7n-slider-track-1"
      style="left:20%;width:30%"
    />
    <div
      class="c7n-slider-step"
    />
    <div
      aria-disabled="false"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="20"
      class="c7n-slider-handle c7n-slider-handle-1"
      role="slider"
      style="left:20%"
      tabindex="0"
    />
    <div
      aria-disabled="false"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="50"
      class="c7n-slider-handle c7n-slider-handle-2"
      role="slider"
      style="left:50%"
      tabindex="0"
    />
    <div
      class="c7n-slider-mark"
    />
  </div>
</div>
`;

exports[`renders ./components/slider/demo/icon-slider.md correctly 1`] = `
<div
  class="icon-wrapper"
>
  <i
    class="icon icon-frown-o"
    style="color:rgba(0, 0, 0, .45)"
  />
  <div
    class="c7n-slider"
  >
    <div
      class="c7n-slider-rail"
    />
    <div
      class="c7n-slider-track"
      style="left:0%;width:0%"
    />
    <div
      class="c7n-slider-step"
    />
    <div
      aria-disabled="false"
      aria-valuemax="20"
      aria-valuemin="0"
      aria-valuenow="0"
      class="c7n-slider-handle"
      role="slider"
      style="left:0%"
      tabindex="0"
    />
    <div
      class="c7n-slider-mark"
    />
  </div>
  <i
    class="icon icon-smile-o"
    style="color:"
  />
</div>
`;

exports[`renders ./components/slider/demo/input-number.md correctly 1`] = `
<div>
  <div
    class="c7n-row"
  >
    <div
      class="c7n-col-12"
    >
      <div
        class="c7n-slider"
      >
        <div
          class="c7n-slider-rail"
        />
        <div
          class="c7n-slider-track"
          style="left:0%;width:0%"
        />
        <div
          class="c7n-slider-step"
        />
        <div
          aria-disabled="false"
          aria-valuemax="20"
          aria-valuemin="1"
          aria-valuenow="1"
          class="c7n-slider-handle"
          role="slider"
          style="left:0%"
          tabindex="0"
        />
        <div
          class="c7n-slider-mark"
        />
      </div>
    </div>
    <div
      class="c7n-col-4"
    >
      <div
        class="c7n-input-number"
        style="margin-left:16px"
      >
        <span
          class="c7n-input-wrapper c7n-input-has-suffix c7n-input-has-border"
        >
          <div
            class="c7n-input-content"
          >
            <div
              class="c7n-input-rendered-wrapper"
            >
              <div
                class="c7n-input-rendered"
              >
                <input
                  autocomplete="off"
                  class="c7n-input"
                  max="20"
                  min="1"
                  step="1"
                  type="text"
                  value="1"
                />
              </div>
              <span
                class="c7n-input-suffix"
              >
                <div
                  class="c7n-input-number-handler-wrap"
                >
                  <span
                    aria-disabled="false"
                    aria-label="Increase Value"
                    class="c7n-input-number-handler c7n-input-number-handler-up "
                    role="button"
                    unselectable="unselectable"
                  >
                    <i
                      class="icon icon-baseline-arrow_drop_up c7n-input-number-handler-up-inner"
                      unselectable="unselectable"
                    />
                  </span>
                  <span
                    aria-disabled="true"
                    aria-label="Decrease Value"
                    class="c7n-input-number-handler c7n-input-number-handler-down c7n-input-number-handler-down-disabled"
                    role="button"
                    unselectable="unselectable"
                  >
                    <i
                      class="icon icon-baseline-arrow_drop_down c7n-input-number-handler-down-inner"
                      unselectable="unselectable"
                    />
                  </span>
                </div>
              </span>
            </div>
          </div>
        </span>
      </div>
    </div>
  </div>
  <div
    class="c7n-row"
  >
    <div
      class="c7n-col-12"
    >
      <div
        class="c7n-slider"
      >
        <div
          class="c7n-slider-rail"
        />
        <div
          class="c7n-slider-track"
          style="left:0%;width:0%"
        />
        <div
          class="c7n-slider-step"
        />
        <div
          aria-disabled="false"
          aria-valuemax="1"
          aria-valuemin="0"
          aria-valuenow="0"
          class="c7n-slider-handle"
          role="slider"
          style="left:0%"
          tabindex="0"
        />
        <div
          class="c7n-slider-mark"
        />
      </div>
    </div>
    <div
      class="c7n-col-4"
    >
      <div
        class="c7n-input-number"
        style="margin-left:16px"
      >
        <span
          class="c7n-input-wrapper c7n-input-has-suffix c7n-input-has-border"
        >
          <div
            class="c7n-input-content"
          >
            <div
              class="c7n-input-rendered-wrapper"
            >
              <div
                class="c7n-input-rendered"
              >
                <input
                  autocomplete="off"
                  class="c7n-input"
                  max="1"
                  min="0"
                  step="0.01"
                  type="text"
                  value="0.00"
                />
              </div>
              <span
                class="c7n-input-suffix"
              >
                <div
                  class="c7n-input-number-handler-wrap"
                >
                  <span
                    aria-disabled="false"
                    aria-label="Increase Value"
                    class="c7n-input-number-handler c7n-input-number-handler-up "
                    role="button"
                    unselectable="unselectable"
                  >
                    <i
                      class="icon icon-baseline-arrow_drop_up c7n-input-number-handler-up-inner"
                      unselectable="unselectable"
                    />
                  </span>
                  <span
                    aria-disabled="true"
                    aria-label="Decrease Value"
                    class="c7n-input-number-handler c7n-input-number-handler-down c7n-input-number-handler-down-disabled"
                    role="button"
                    unselectable="unselectable"
                  >
                    <i
                      class="icon icon-baseline-arrow_drop_down c7n-input-number-handler-down-inner"
                      unselectable="unselectable"
                    />
                  </span>
                </div>
              </span>
            </div>
          </div>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/slider/demo/mark.md correctly 1`] = `
<div>
  <h4>
    included=true
  </h4>
  <div
    class="c7n-slider c7n-slider-with-marks"
  >
    <div
      class="c7n-slider-rail"
    />
    <div
      class="c7n-slider-track"
      style="left:0%;width:37%"
    />
    <div
      class="c7n-slider-step"
    >
      <span
        class="c7n-slider-dot c7n-slider-dot-active"
        style="left:0%"
      />
      <span
        class="c7n-slider-dot c7n-slider-dot-active"
        style="left:26%"
      />
      <span
        class="c7n-slider-dot c7n-slider-dot-active"
        style="left:37%"
      />
      <span
        class="c7n-slider-dot"
        style="left:100%"
      />
    </div>
    <div
      aria-disabled="false"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="37"
      class="c7n-slider-handle"
      role="slider"
      style="left:37%"
      tabindex="0"
    />
    <div
      class="c7n-slider-mark"
    >
      <span
        class="c7n-slider-mark-text c7n-slider-mark-text-active"
        style="width:30.000000000000004%;margin-left:-15.000000000000002%;left:0%"
      >
        0°C
      </span>
      <span
        class="c7n-slider-mark-text c7n-slider-mark-text-active"
        style="width:30.000000000000004%;margin-left:-15.000000000000002%;left:26%"
      >
        26°C
      </span>
      <span
        class="c7n-slider-mark-text c7n-slider-mark-text-active"
        style="width:30.000000000000004%;margin-left:-15.000000000000002%;left:37%"
      >
        37°C
      </span>
      <span
        class="c7n-slider-mark-text"
        style="width:30.000000000000004%;margin-left:-15.000000000000002%;left:100%;color:#f50"
      >
        <strong>
          100°C
        </strong>
      </span>
    </div>
  </div>
  <div
    class="c7n-slider c7n-slider-with-marks"
  >
    <div
      class="c7n-slider-rail"
    />
    <div
      class="c7n-slider-track c7n-slider-track-1"
      style="left:26%;width:11%"
    />
    <div
      class="c7n-slider-step"
    >
      <span
        class="c7n-slider-dot"
        style="left:0%"
      />
      <span
        class="c7n-slider-dot c7n-slider-dot-active"
        style="left:26%"
      />
      <span
        class="c7n-slider-dot c7n-slider-dot-active"
        style="left:37%"
      />
      <span
        class="c7n-slider-dot"
        style="left:100%"
      />
    </div>
    <div
      aria-disabled="false"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="26"
      class="c7n-slider-handle c7n-slider-handle-1"
      role="slider"
      style="left:26%"
      tabindex="0"
    />
    <div
      aria-disabled="false"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="37"
      class="c7n-slider-handle c7n-slider-handle-2"
      role="slider"
      style="left:37%"
      tabindex="0"
    />
    <div
      class="c7n-slider-mark"
    >
      <span
        class="c7n-slider-mark-text"
        style="width:30.000000000000004%;margin-left:-15.000000000000002%;left:0%"
      >
        0°C
      </span>
      <span
        class="c7n-slider-mark-text c7n-slider-mark-text-active"
        style="width:30.000000000000004%;margin-left:-15.000000000000002%;left:26%"
      >
        26°C
      </span>
      <span
        class="c7n-slider-mark-text c7n-slider-mark-text-active"
        style="width:30.000000000000004%;margin-left:-15.000000000000002%;left:37%"
      >
        37°C
      </span>
      <span
        class="c7n-slider-mark-text"
        style="width:30.000000000000004%;margin-left:-15.000000000000002%;left:100%;color:#f50"
      >
        <strong>
          100°C
        </strong>
      </span>
    </div>
  </div>
  <h4>
    included=false
  </h4>
  <div
    class="c7n-slider c7n-slider-with-marks"
  >
    <div
      class="c7n-slider-rail"
    />
    <div
      class="c7n-slider-step"
    >
      <span
        class="c7n-slider-dot"
        style="left:0%"
      />
      <span
        class="c7n-slider-dot"
        style="left:26%"
      />
      <span
        class="c7n-slider-dot c7n-slider-dot-active"
        style="left:37%"
      />
      <span
        class="c7n-slider-dot"
        style="left:100%"
      />
    </div>
    <div
      aria-disabled="false"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="37"
      class="c7n-slider-handle"
      role="slider"
      style="left:37%"
      tabindex="0"
    />
    <div
      class="c7n-slider-mark"
    >
      <span
        class="c7n-slider-mark-text"
        style="width:30.000000000000004%;margin-left:-15.000000000000002%;left:0%"
      >
        0°C
      </span>
      <span
        class="c7n-slider-mark-text"
        style="width:30.000000000000004%;margin-left:-15.000000000000002%;left:26%"
      >
        26°C
      </span>
      <span
        class="c7n-slider-mark-text c7n-slider-mark-text-active"
        style="width:30.000000000000004%;margin-left:-15.000000000000002%;left:37%"
      >
        37°C
      </span>
      <span
        class="c7n-slider-mark-text"
        style="width:30.000000000000004%;margin-left:-15.000000000000002%;left:100%;color:#f50"
      >
        <strong>
          100°C
        </strong>
      </span>
    </div>
  </div>
  <h4>
    marks & step
  </h4>
  <div
    class="c7n-slider c7n-slider-with-marks"
  >
    <div
      class="c7n-slider-rail"
    />
    <div
      class="c7n-slider-track"
      style="left:0%;width:37%"
    />
    <div
      class="c7n-slider-step"
    >
      <span
        class="c7n-slider-dot c7n-slider-dot-active"
        style="left:0%"
      />
      <span
        class="c7n-slider-dot c7n-slider-dot-active"
        style="left:26%"
      />
      <span
        class="c7n-slider-dot c7n-slider-dot-active"
        style="left:37%"
      />
      <span
        class="c7n-slider-dot"
        style="left:100%"
      />
    </div>
    <div
      aria-disabled="false"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="37"
      class="c7n-slider-handle"
      role="slider"
      style="left:37%"
      tabindex="0"
    />
    <div
      class="c7n-slider-mark"
    >
      <span
        class="c7n-slider-mark-text c7n-slider-mark-text-active"
        style="width:30.000000000000004%;margin-left:-15.000000000000002%;left:0%"
      >
        0°C
      </span>
      <span
        class="c7n-slider-mark-text c7n-slider-mark-text-active"
        style="width:30.000000000000004%;margin-left:-15.000000000000002%;left:26%"
      >
        26°C
      </span>
      <span
        class="c7n-slider-mark-text c7n-slider-mark-text-active"
        style="width:30.000000000000004%;margin-left:-15.000000000000002%;left:37%"
      >
        37°C
      </span>
      <span
        class="c7n-slider-mark-text"
        style="width:30.000000000000004%;margin-left:-15.000000000000002%;left:100%;color:#f50"
      >
        <strong>
          100°C
        </strong>
      </span>
    </div>
  </div>
  <h4>
    step=null
  </h4>
  <div
    class="c7n-slider c7n-slider-with-marks"
  >
    <div
      class="c7n-slider-rail"
    />
    <div
      class="c7n-slider-track"
      style="left:0%;width:37%"
    />
    <div
      class="c7n-slider-step"
    >
      <span
        class="c7n-slider-dot c7n-slider-dot-active"
        style="left:0%"
      />
      <span
        class="c7n-slider-dot c7n-slider-dot-active"
        style="left:26%"
      />
      <span
        class="c7n-slider-dot c7n-slider-dot-active"
        style="left:37%"
      />
      <span
        class="c7n-slider-dot"
        style="left:100%"
      />
    </div>
    <div
      aria-disabled="false"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="37"
      class="c7n-slider-handle"
      role="slider"
      style="left:37%"
      tabindex="0"
    />
    <div
      class="c7n-slider-mark"
    >
      <span
        class="c7n-slider-mark-text c7n-slider-mark-text-active"
        style="width:30.000000000000004%;margin-left:-15.000000000000002%;left:0%"
      >
        0°C
      </span>
      <span
        class="c7n-slider-mark-text c7n-slider-mark-text-active"
        style="width:30.000000000000004%;margin-left:-15.000000000000002%;left:26%"
      >
        26°C
      </span>
      <span
        class="c7n-slider-mark-text c7n-slider-mark-text-active"
        style="width:30.000000000000004%;margin-left:-15.000000000000002%;left:37%"
      >
        37°C
      </span>
      <span
        class="c7n-slider-mark-text"
        style="width:30.000000000000004%;margin-left:-15.000000000000002%;left:100%;color:#f50"
      >
        <strong>
          100°C
        </strong>
      </span>
    </div>
  </div>
</div>
`;

exports[`renders ./components/slider/demo/tip-formatter.md correctly 1`] = `
<div>
  <div
    class="c7n-slider"
  >
    <div
      class="c7n-slider-rail"
    />
    <div
      class="c7n-slider-track"
      style="left:0%;width:0%"
    />
    <div
      class="c7n-slider-step"
    />
    <div
      aria-disabled="false"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="0"
      class="c7n-slider-handle"
      role="slider"
      style="left:0%"
      tabindex="0"
    />
    <div
      class="c7n-slider-mark"
    />
  </div>
  <div
    class="c7n-slider"
  >
    <div
      class="c7n-slider-rail"
    />
    <div
      class="c7n-slider-track"
      style="left:0%;width:0%"
    />
    <div
      class="c7n-slider-step"
    />
    <div
      aria-disabled="false"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="0"
      class="c7n-slider-handle"
      role="slider"
      style="left:0%"
      tabindex="0"
    />
    <div
      class="c7n-slider-mark"
    />
  </div>
</div>
`;

exports[`renders ./components/slider/demo/vertical.md correctly 1`] = `
<div
  style="height:300px"
>
  <div
    style="float:left;height:300px;margin-left:70px"
  >
    <div
      class="c7n-slider c7n-slider-vertical"
    >
      <div
        class="c7n-slider-rail"
      />
      <div
        class="c7n-slider-track"
        style="bottom:0%;height:30%"
      />
      <div
        class="c7n-slider-step"
      />
      <div
        aria-disabled="false"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="30"
        class="c7n-slider-handle"
        role="slider"
        style="bottom:30%"
        tabindex="0"
      />
      <div
        class="c7n-slider-mark"
      />
    </div>
  </div>
  <div
    style="float:left;height:300px;margin-left:70px"
  >
    <div
      class="c7n-slider c7n-slider-vertical"
    >
      <div
        class="c7n-slider-rail"
      />
      <div
        class="c7n-slider-track c7n-slider-track-1"
        style="bottom:20%;height:30%"
      />
      <div
        class="c7n-slider-step"
      />
      <div
        aria-disabled="false"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="20"
        class="c7n-slider-handle c7n-slider-handle-1"
        role="slider"
        style="bottom:20%"
        tabindex="0"
      />
      <div
        aria-disabled="false"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="50"
        class="c7n-slider-handle c7n-slider-handle-2"
        role="slider"
        style="bottom:50%"
        tabindex="0"
      />
      <div
        class="c7n-slider-mark"
      />
    </div>
  </div>
  <div
    style="float:left;height:300px;margin-left:70px"
  >
    <div
      class="c7n-slider c7n-slider-with-marks c7n-slider-vertical"
    >
      <div
        class="c7n-slider-rail"
      />
      <div
        class="c7n-slider-track c7n-slider-track-1"
        style="bottom:26%;height:11%"
      />
      <div
        class="c7n-slider-step"
      >
        <span
          class="c7n-slider-dot"
          style="bottom:0%"
        />
        <span
          class="c7n-slider-dot c7n-slider-dot-active"
          style="bottom:26%"
        />
        <span
          class="c7n-slider-dot c7n-slider-dot-active"
          style="bottom:37%"
        />
        <span
          class="c7n-slider-dot"
          style="bottom:100%"
        />
      </div>
      <div
        aria-disabled="false"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="26"
        class="c7n-slider-handle c7n-slider-handle-1"
        role="slider"
        style="bottom:26%"
        tabindex="0"
      />
      <div
        aria-disabled="false"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="37"
        class="c7n-slider-handle c7n-slider-handle-2"
        role="slider"
        style="bottom:37%"
        tabindex="0"
      />
      <div
        class="c7n-slider-mark"
      >
        <span
          class="c7n-slider-mark-text"
          style="margin-bottom:-50%;bottom:0%"
        >
          0°C
        </span>
        <span
          class="c7n-slider-mark-text c7n-slider-mark-text-active"
          style="margin-bottom:-50%;bottom:26%"
        >
          26°C
        </span>
        <span
          class="c7n-slider-mark-text c7n-slider-mark-text-active"
          style="margin-bottom:-50%;bottom:37%"
        >
          37°C
        </span>
        <span
          class="c7n-slider-mark-text"
          style="margin-bottom:-50%;bottom:100%;color:#f50"
        >
          <strong>
            100°C
          </strong>
        </span>
      </div>
    </div>
  </div>
</div>
`;
